readme update and small other tweaks
picture of result in readme

include the picture

readme tweak

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,16 +6,16 @@ set(CMAKE_TOOLCHAIN_FILE "/home/pee3/vcpkg/scripts/buildsystems/vcpkg.cmake" CAC
 # Set the project name
 project(vpr)
 
-# Set the C++ standard
-set(CMAKE_CXX_STANDARD 17)
+# Set the C++ standard 
+set(CMAKE_CXX_STANDARD 17) # ortools and cpr require at least 17 I believe
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Find the cpr package
 find_package(cpr REQUIRED)
 find_package(nlohmann_json REQUIRED)
 
+# Prefix path for ortools so "find_package" can reach it
 set(CMAKE_PREFIX_PATH "$ENV{HOME}/or-tools" ${CMAKE_PREFIX_PATH})
-# set(ORTOOLS_DIR "$ENV{HOME}/or-tools")
 find_package(ortools REQUIRED CONFIG)
 
 # Add the executable
