--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,11 @@ project(vpr)
 set(CMAKE_CXX_STANDARD 17) # ortools and cpr require at least 17 I believe
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+set(SOURCES
+    src/main.cpp
+    src/assignment.cpp
+)
+
 # Find the cpr package
 find_package(cpr REQUIRED)
 find_package(nlohmann_json REQUIRED)
@@ -19,7 +24,7 @@ set(CMAKE_PREFIX_PATH "$ENV{HOME}/or-tools" ${CMAKE_PREFIX_PATH})
 find_package(ortools REQUIRED CONFIG)
 
 # Add the executable
-add_executable(main main.cpp)
+add_executable(main ${SOURCES})
 
 # Link libraries
 target_link_libraries(main PRIVATE cpr::cpr nlohmann_json::nlohmann_json ortools::ortools)
